--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="../dist/index.js" type="module" defer></script>
+    <script src="../dist/index.js" type="module">
+      console.log("laskjdkş")
+    </script>
   </head>
   <body>
     <script type="module" defer>
