auto remove element on DOM func added, animation improved

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,11 @@
     <script src="../dist/index.js" type="module">
       console.log("laskjdkş")
     </script>
+    <style>
+      body {
+        background-color: rgb(211, 211, 211);
+      }
+    </style>
   </head>
   <body>
     <script type="module" defer>
