default config connected

--- a/demo/index.html
+++ b/demo/index.html
@@ -47,11 +47,7 @@
     </footer>
     <script type="module" defer>
       import SnowFall from "../dist/index.js";
-      new SnowFall({
-        sizeRange: [10, 20],
-        color: "#fff",
-        speed: 10,
-      });
+      new SnowFall();
     </script>
   </body>
 </html>
