--- a/demo/index.html
+++ b/demo/index.html
@@ -47,7 +47,11 @@
     </footer>
     <script type="module" defer>
       import SnowFall from "../dist/index.js";
-      new SnowFall();
+      new SnowFall({
+        sizeRange: [10, 20],
+        color: "#fff",
+        speed: 10,
+      });
     </script>
   </body>
 </html>
